# robocup-base-station

./: .gitignore  .gitmodules  Cargo.toml  README.md  todo
.cargo/: config.toml
examples/: field_computer_check.rs  ping_pong.rs  receive.rs  send.rs  straight_line.rs  tokio-runtime.rs  xbox_control.rs
src/: benchmarker_node.rs  cpu_relay_node.rs  display_node.rs  input_node.rs  lib.rs  main.rs  nrf_pubsub.rs  one_radio.rs  publishers.rs  radio_node.rs  relay_node.rs  robot_relay_node.rs  timeout_checker.rs  visor_node.rs  xbox_node.rs
src/cpu_relay_node/: packed_struct_publisher.rs  radio_publisher.rs
src/one_radio/: radio_node.rs
src/publishers/: nrf_pubsub.rs
src/robot_relay_node/: radio_subscriber.rs
tests/: alive_robots_pub_test.rs  alive_robots_test.rs  base_radio_receive.rs  base_radio_send.rs  base_station_relay.rs  field_computer_test.rs  ping_pong.rs  radio_benchmarks.rs  radio_publisher_control_message.rs  radio_publisher_wake_up.rs  radio_subscriber_test.rs  robot_status_pub_test.rs  round_trip.rs  spi_test.rs  straight_line.rs
