[package]
name = "robocup-base-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.4"
embedded-hal = "0.2.7"
packed_struct = "0.10.1"

[dependencies.ncomm]
version = "0.4.2"
features = ["packed-struct"]

[dependencies.robojackets-robocup-rtp]
version = "0.4.1"
default_features = false
features = ["std"]

[dependencies.rppal]
version = "0.14.1"
features = ["hal"]

[dependencies.clap]
version = "4.4.4"
features = ["derive"]

[dependencies.rtic-nrf24l01]
git = "https://github.com/N8BWert/rtic-nrf24l01.git"

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
yellow-team = ["robojackets-robocup-rtp/yellow-team"]
blue-team = ["robojackets-robocup-rtp/blue-team"]