[package]
name = "robocup-base-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
ctrlc = "3.4.5"
embedded-hal = "1.0.0"
ncomm = "1.1.4"
quanta = "0.12.3"
robojackets-robocup-rtp = "0.6.3"

[dependencies.rppal]
version = "0.19.0"
features = ["hal"]

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.rtic-nrf24l01]
git = "https://github.com/N8BWert/rtic-nrf24l01.git"

[dev-dependencies]
rand = "0.8.5"

[features]
default = []
